d2c-org/d2c-core/base-code/main/default/objects/API_Endpoint__mdt/API_Endpoint__mdt.object-meta.xml
<CustomObject>
    <description>Store the rest/soap api endpoint information like method,URL,named credentials, timeout etc</description>
    <label>API Endpoint</label>
    <pluralLabel>API Endpoints</pluralLabel>
</CustomObject>