d2c-org/d2c-core/base-code/main/default/objects/API_Endpoint__mdt/fields/Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Client_Id__c</fullName>
    <description>Client id</description>
    <label>Client Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>