d2c-org/d2c-core/base-code/main/default/objects/API_Endpoint__mdt/fields/ContentType__c.field-meta.xml
<CustomField>
    <fullName>ContentType__c</fullName>
    <label>Content Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>application/json</fullName>
                <default>true</default>
                <label>application/json</label>
            </value>
            <value>
                <fullName>application/xml</fullName>
            </value>
            <value>
                <fullName>text/xml; charset=utf-8</fullName>
            </value>
            <value>
                <fullName>application/x-www-form-urlencoded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>