d2c-org/d2c-core/base-code/main/default/objects/API_Endpoint__mdt/fields/is_Active__c.field-meta.xml
<CustomField>
    <fullName>is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this endpoint is active or not</description>
    <label>is Active</label>
    <type>Checkbox</type>
</CustomField>