d2c-org/d2c-core/base-code/main/default/objects/API_Endpoint__mdt/fields/isOIDCSecured__c.field-meta.xml
<CustomField>
    <fullName>isOIDCSecured__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field tells whether endpoints are OIDC secured and need JWT for authentication</description>
    <label>is OIDC Secured</label>
    <type>Checkbox</type>
</CustomField>