d2c-org/d2c-core/base-code/main/default/objects/API_Endpoint__mdt/fields/Mock_Response_Static_Resource__c.field-meta.xml
<CustomField>
    <fullName>Mock_Response_Static_Resource__c</fullName>
    <label>Mock Response Static Resource</label>
    <length>255</length>
    <type>Text</type>
</CustomField>