d2c-org/d2c-core/base-code/main/default/objects/API_Endpoint__mdt/fields/Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential__c</fullName>
    <description>Which named credential to use</description>
    <label>Named Credential</label>
    <length>255</length>
    <type>Text</type>
</CustomField>