d2c-org/d2c-core/base-code/main/default/objects/API_Endpoint__mdt/fields/Service_Method__c.field-meta.xml
<CustomField>
    <fullName>Service_Method__c</fullName>
    <label>Service Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>