d2c-org/d2c-core/base-code/main/default/objects/API_Endpoint__mdt/fields/ServiceName__c.field-meta.xml
<CustomField>
    <fullName>ServiceName__c</fullName>
    <label>ServiceName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>